--- a/.env.test
+++ b/.env.test
@@ -22,4 +22,5 @@ VITE_DROP_CONSOLE = true
 VITE_PWA = false
 
 # 测试环境接口地址
-VITE_API_URL = "https://mock.mengxuegu.com/mock/629d727e6163854a32e8307e"
+VITE_API_URL = "http://127.0.0.1:5001"
+# VITE_API_URL = "https://mock.mengxuegu.com/mock/629d727e6163854a32e8307e"
